tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_references_cannot_mutate_immutable_variable_on_member_access/execute__tests__force_brillig_false_inliner_0_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: Cannot mutate immutable variable `foo`
  ┌─ src/main.nr:8:21
  │
8 │         mutate(&mut foo.x);
  │                     -----
  │

Aborting due to 1 previous error
