tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_references_cannot_mutate_immutable_variable_on_member_access/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Cannot mutate immutable variable `foo`
  ┌─ src/main.nr:8:21
  │
8 │         mutate(&mut foo.x);
  │                     -----
  │

Aborting due to 1 previous error
